# VISTA

./: .gitignore  LICENSE  README.md  client.py  pyproject.toml
backend-linux-logger/: db_schema.sql  log_monitor.py  main.py  readme.md  test_connection.py
client-admin/: tailwind.config.js
client-admin/vista_frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
client-admin/vista_frontend/app/: globals.css  page.js
client-admin/vista_frontend/app/dashboard/: page.jsx
client-admin/vista_frontend/components/: About.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  NeuralBG.jsx  Services.jsx
linux-agent-local/: README.md  audio-channel.py  audio-comp.py  audio-device.py  setup.py  test-voice.py
linux-agent-local/agent/: main.py
linux-agent-local/agent/modules/: device_fingerprint.py  keystroke_dynamics.py  mouse_monitor.py  system_events.py  usb_monitor.py  voice_snapshots.py
linux-agent-local/agent/utils/: local_logger.py
pretrained_models/spkrec-ecapa/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
server/: server.py
server/models/: FDAuth.py  KMStress.py  VAuth.py
test-scripts/: KMTest.py  VoiceAuth.py
testscripts/: FDTest.py  KMTest.py  VoiceAuth.py  device_fingerprint.py  faceDetec.html
voice-based-pam/: pam_voice_auth.c  readme.md
